<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:fillViewport="true"
    android:gravity="center">

    <TextView
        android:id="@+id/register_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:background="@drawable/bg_toolbar"
        android:paddingStart="30dp"
        android:paddingTop="@dimen/padding_medium_2"
        android:paddingBottom="@dimen/padding_medium_2"
        android:text="@string/tab_title_register"
        android:textAppearance="@style/SectionHeader"
        android:textColor="@color/toolbar_text_color" />

    <FrameLayout
        android:id="@+id/frame_stepper_indicator"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/register_title"
        android:background="@color/subtitle_bar_bg_color"
        android:paddingStart="@dimen/padding_large"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingEnd="@dimen/padding_large"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <com.badoualy.stepperindicator.StepperIndicator
            android:id="@+id/stepper_indicator"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            app:stpi_circleColor="@color/register_steps_indicator_circleColor"
            app:stpi_circleRadius="8dp"
            app:stpi_indicatorColor="@color/register_steps_indicator_doneColor"
            app:stpi_lineColor="@color/register_steps_indicator_lineColor"
            app:stpi_lineDoneColor="@color/register_steps_indicator_lineColor"
            app:stpi_stepCount="3" />
    </FrameLayout>

    <ScrollView
        android:id="@+id/register_form"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/form_bottom"
        android:layout_below="@+id/frame_stepper_indicator"
        android:layout_marginTop="@dimen/activity_vertical_margin">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingStart="@dimen/padding_large"
            android:paddingEnd="@dimen/activity_horizontal_margin">


            <TextView
                android:id="@+id/step_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/margin_medium"
                android:textSize="17sp"
                android:visibility="gone"
                tools:text="Please, this is a form step description" />

            <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                android:id="@+id/register_form_username_field"
                style="@style/Oppia.CustomField.TextInputLayout"
                app:cantContainSpaces="true"
                app:required="true">

                <EditText
                    android:id="@+id/register_form_username_edittext"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_form_username_title"
                    android:inputType="text"
                    android:textSize="15sp" />

            </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

            <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                android:id="@+id/register_form_password_field"
                style="@style/Oppia.CustomField.TextInputLayout"
                android:layout_marginTop="@dimen/margin_medium"
                app:cantContainSpaces="true"
                app:passwordToggleEnabled="true"
                app:required="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_form_password_title"
                    android:inputType="textPassword"
                    android:textSize="15sp" />
            </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

            <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                android:id="@+id/register_form_password_again_field"
                style="@style/Oppia.CustomField.TextInputLayout"
                android:layout_marginTop="@dimen/margin_medium"
                app:cantContainSpaces="true"
                app:passwordToggleEnabled="true"
                app:required="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_form_password_again_title"
                    android:inputType="textPassword"
                    android:textSize="15sp" />
            </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

            <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                android:id="@+id/register_form_email_field"
                style="@style/Oppia.CustomField.TextInputLayout"
                android:layout_marginTop="@dimen/margin_medium"
                app:cantContainSpaces="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_form_email_title"
                    android:inputType="textEmailAddress"
                    android:textSize="15sp" />

            </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

            <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                android:id="@+id/register_form_firstname_field"
                style="@style/Oppia.CustomField.TextInputLayout"
                android:layout_marginTop="@dimen/margin_medium"
                app:required="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_form_firstname_title"
                    android:inputType="text"
                    android:textSize="15sp" />
            </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>


            <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                android:id="@+id/register_form_lastname_field"
                style="@style/Oppia.CustomField.TextInputLayout"
                android:layout_marginTop="@dimen/margin_medium"
                app:required="true">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_form_lastname_title"
                    android:inputType="text"
                    android:textSize="15sp" />
            </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

            <org.digitalcampus.oppia.utils.ui.fields.ValidableNestedTextInputLayout
                android:id="@+id/register_form_phoneno_field"
                style="@style/Oppia.CustomField.TextInputLayout"
                android:layout_marginTop="@dimen/margin_medium"
                android:gravity="center_vertical">

                <LinearLayout
                    android:id="@+id/field_phoneno_container"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <com.hbb20.CountryCodePicker
                        android:id="@+id/ccp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom"
                        android:textSize="15sp"
                        app:ccp_autoDetectCountry="true" />

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/ccp_text_input_layout"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">

                        <EditText
                            android:id="@+id/register_form_phoneno_edittext"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/register_form_phoneno_title"
                            android:inputType="phone"
                            android:singleLine="true"
                            android:textSize="15sp" />
                    </com.google.android.material.textfield.TextInputLayout>

                </LinearLayout>
            </org.digitalcampus.oppia.utils.ui.fields.ValidableNestedTextInputLayout>


            <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                android:id="@+id/register_form_organisation_field"
                style="@style/Oppia.CustomField.TextInputLayout"
                android:layout_marginTop="@dimen/margin_medium">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_form_organisation_title"
                    android:inputType="text"
                    android:textSize="15sp" />
            </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

            <org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout
                android:id="@+id/register_form_jobtitle_field"
                style="@style/Oppia.CustomField.TextInputLayout"
                android:layout_marginTop="@dimen/margin_medium">

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_form_jobtitle_title"
                    android:inputType="text"
                    android:textSize="15sp" />

            </org.digitalcampus.oppia.utils.ui.fields.ValidableTextInputLayout>

            <LinearLayout
                android:id="@+id/custom_fields_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />

            <LinearLayout
                android:id="@+id/stepped_fields_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical" />
        </LinearLayout>

    </ScrollView>


    <LinearLayout
        android:id="@+id/form_bottom"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginTop="@dimen/padding_medium"
        android:background="@color/background_light"
        android:orientation="vertical"
        android:paddingStart="@dimen/padding_medium_2"
        android:paddingTop="@dimen/padding_medium"
        android:paddingEnd="@dimen/padding_medium_2"
        android:paddingBottom="@dimen/padding_medium">

        <LinearLayout
            android:id="@+id/view_privacy_policy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginBottom="8dp">

            <androidx.appcompat.widget.AppCompatCheckBox
                android:id="@+id/check_privacy_policy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/accept_privacy_check"/>

            <TextView
                android:id="@+id/tv_privacy_policy_link"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/privacy_policy"
                android:padding="3dp"
                android:textStyle="bold"
                android:textColor="@color/oppia_primary_dark"/>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="2">


            <LinearLayout
                android:id="@+id/login_container"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="@dimen/margin_medium"
                android:layout_weight="1"
                android:orientation="vertical"
                android:visibility="visible">

                <TextView
                    android:id="@+id/dont_have_account2"
                    style="@style/SubheaderText"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="-3dp"
                    android:layout_weight="0"
                    android:gravity="center"
                    android:text="@string/register_account_already" />

                <Button
                    android:id="@+id/action_login_btn"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="bottom"
                    android:layout_weight="0"
                    android:text="@string/tab_title_login" />
            </LinearLayout>


            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/prev_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="1"
                android:drawableStart="@drawable/ic_arrow_left"
                android:text="@string/widget_quiz_prev"
                android:visibility="gone" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/register_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="1"
                android:text="@string/register_btn_text"
                android:theme="@style/PrimaryButton"
                android:visibility="visible" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/next_btn"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="bottom|center_horizontal"
                android:layout_weight="1"
                android:drawableEnd="@drawable/ic_arrow_right"
                android:text="@string/widget_quiz_next"
                android:theme="@style/PrimaryButton"
                android:visibility="gone"
                app:drawableTint="@color/white" />

        </LinearLayout>
    </LinearLayout>

</RelativeLayout>